--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,7 +34,7 @@ android {
 }
 
 dependencies {
-
+    implementation 'androidx.activity:activity-ktx:1.9.2'
     implementation libs.androidx.core.ktx
     implementation libs.androidx.appcompat
     implementation libs.material
