--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,6 +34,9 @@ android {
 }
 
 dependencies {
+    def recyclerview_version = "1.3.2"
+
+    implementation "androidx.recyclerview:recyclerview:$recyclerview_version"
     implementation 'androidx.activity:activity-ktx:1.9.2'
     implementation libs.androidx.core.ktx
     implementation libs.androidx.appcompat
