--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,7 +5,7 @@ plugins {
 
 android {
     namespace 'ru.netology.nmedia'
-    compileSdk 34
+    compileSdk 35
 
     defaultConfig {
         applicationId "ru.netology.nmedia"
@@ -36,9 +36,13 @@ android {
 dependencies {
     implementation libs.generativeai
     def recyclerview_version = "1.3.2"
+    def fragment_version ="1.3.1"
+    def activity_version= '1.9.3'
 
+    implementation "androidx.fragment:fragment-ktx:$fragment_version"
+    implementation "androidx.activity:activity-ktx:$activity_version"
     implementation "androidx.recyclerview:recyclerview:$recyclerview_version"
-    implementation 'androidx.activity:activity-ktx:1.9.2'
+    implementation 'androidx.activity:activity-ktx:1.9.3'
     implementation libs.androidx.core.ktx
     implementation libs.androidx.appcompat
     implementation libs.material
