--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,8 @@
 plugins {
-    alias(libs.plugins.android.application)
-    alias(libs.plugins.kotlin.android)
+    id 'com.android.application'
+    id 'org.jetbrains.kotlin.android'
+    id 'org.jetbrains.kotlin.kapt'
+
 }
 
 android {
@@ -34,24 +36,38 @@ android {
 }
 
 dependencies {
-    implementation libs.generativeai
-    def recyclerview_version = "1.3.2"
-    def fragment_version ="1.3.1"
-    def activity_version= '1.9.3'
-    def gson_version="2.11.0"
+    implementation libs.play.services.base
+    implementation libs.firebase.messaging.ktx
+    def core_version = "1.15.0"
+    def appcompat_version = "1.7.0"
+    def mdc_version = "1.12.0"
+    def constraintlayout_version = "2.2.0"
+    def recyclerview_version = "1.4.0"
+    def junit_version = "4.13.2"
+    def ext_junit_version = "1.2.1"
+    def espresso_core_version = "3.6.1"
+    def activity_version = "1.10.0"
+    def lifecycle_version = "2.8.7"
+    def gson_version = "2.12.1"
+    def nav_version = "2.8.7"
+    def room_version = "2.6.1"
 
-    implementation "androidx.fragment:fragment-ktx:$fragment_version"
-    implementation "androidx.activity:activity-ktx:$activity_version"
+    implementation "androidx.core:core-ktx:$core_version"
+    implementation "androidx.appcompat:appcompat:$appcompat_version"
+    implementation "com.google.android.material:material:$mdc_version"
+    implementation "androidx.constraintlayout:constraintlayout:$constraintlayout_version"
     implementation "androidx.recyclerview:recyclerview:$recyclerview_version"
-    implementation 'androidx.activity:activity-ktx:1.9.3'
-    implementation libs.androidx.core.ktx
-    implementation libs.androidx.appcompat
-    implementation libs.material
-    implementation libs.androidx.activity
-    implementation libs.androidx.constraintlayout
+    implementation "androidx.activity:activity-ktx:$activity_version"
+    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$lifecycle_version"
+    implementation "androidx.lifecycle:lifecycle-livedata-ktx:$lifecycle_version"
     implementation "com.google.code.gson:gson:$gson_version"
+    implementation "androidx.navigation:navigation-fragment-ktx:$nav_version"
+    implementation "androidx.navigation:navigation-ui-ktx:$nav_version"
+    implementation "androidx.room:room-runtime:$room_version"
+    kapt "androidx.room:room-compiler:$room_version"
 
-    testImplementation libs.junit
-    androidTestImplementation libs.androidx.junit
-    androidTestImplementation libs.androidx.espresso.core
+    testImplementation "junit:junit:$junit_version"
+    androidTestImplementation "androidx.test.ext:junit:$ext_junit_version"
+    androidTestImplementation "androidx.test.espresso:espresso-core:$espresso_core_version"
+
 }
